- Catch wxWidgets Asserts and raise them as Ruby fatal exceptions, to avoid 
  a cascade of worthless "addr2line" console output on Linux
- Fix bigdemo to allow right-side splitter to be resized. (It was being 
  created with the splitter bar so high that it was under the tabs of the 
	notebook, and therefore couldn't be resized)
- Fix wxTextCtrl.h compile errors by removing overflow() (Roy Sutton)
- Fix swig object tracking, hopefully fixing many crashes (Roy Sutton)
- Patch to avoid almost immediate crashing in all samples on Linux after 
  above patch was applied. Running minimal.rb, and opening and closing the 
	Help/About box was the easiest way to see the problem. For some reason, 
	an internal value was Qnil but the SWIG code was not checking for that.
- Small fix to typemaps for wxString return values (Roy Sutton)
- Require swig 1.3.29 or later (thanks to Roy Sutton)
- Fix detection of Intel Macs (Sean Long)

====0.0.30 tag included all of this:===
*** NOTE: At this point, wxruby2 compiles and links on Ubuntu GNU/Linux, and 
    can at least launch most samples. However, it crashes a lot.
- BIG changes to target wxWidgets 2.6.3:
  - controls.rb sample: Temporarily removed ArtProvider stuff that is crashing
  - Button: Made GetLabel and SetLabel methods virtual
  - Control: Added empty constructor, and made GetLabel and SetLabel virtual
  - RadioBox: Removed deprecated GetLabel(n) and SetLabel(n) methods, and
      made GetLabel and SetLabel virtual
  - StaticText: Made GetLabel virtual
  - TextCtrl: Refreshed entire definition, making several more methods virtual
  - TreeCtrl: Implemented internal hack to work around the fact that this 
      class has different superclasses on different platforms
  - ART_XXX constants are now of type ArtID (instead of being strings), but
      the ArtProvider stuff doesn't really work yet (at least it compiles!)
  - No longer typedef ArtID and ArtClient as wxStrings
- BIG changes to target SWIG 1.3.29: