@@ -1,0 +1,18 @@
+#   Copyright 2004-2005 by Kevin Smith
+#   released under the MIT-style wxruby2 license
+
+%include "../common.i"
+
+%{
+#include <wx/wx.h>
+#include <wx/listctrl.h>
+%}
+
+%module(directors="1") wxListEvent
+
+%import "include/wxObject.h"
+%import "include/wxEvent.h"
+%import "include/wxCommandEvent.h"
+%import "include/wxNotifyEvent.h"
+
+%include "include/wxListEvent.h"
